--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
     </div>
     <div class="player">
       <div class="play">
-      <audio id="autoplay" onclick="autoplay()" src="./passlive_dot.mp3"  autoplay loop preload="auto" ></audio>
+      <audio id="autoplay" src="./passlive_dot.mp3" controls autoplay loop preload="auto" ></audio>
     </div>
     </div>
   </div>
     <script src="./script.js">    
 	    document.getElementById('autoplay').play();
-      $('autoplay()').click(function(){this.paused?this.play():this.pause();});
-
     </script>
 </body>
 </html>
