--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    
-    <title>Document</title>
+    <link rel="shortcut icon" href="./icon/avt.JPG" type="image/x-icon">
+    <title>BINH KMA</title>
 </head>
 <body>
   <canvas id="bgCanvas"></canvas>
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="center">
         <div class="avt">
-          <img src="https://nvb07.github.io/profile/IMG_0009.JPG" alt="">         
+          <img src="./icon/avt.JPG" alt="">         
         </div>
         <div class="name">BINH KMA </div>
       </div>
