--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </div>
     <div class="player">
       <div class="play">
-      <audio id="autoplay" src="./passlive_dot.mp3" controls autoplay loop preload="auto" ></audio>
+      <audio id="autoplay" controls autoplay loop preload="auto" >
+	 <source src="./mp3/noiNhoTuaThienHa.mp3">
+      </audio>
     </div>
     </div>
   </div>
