--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./icon/avt.JPG" type="image/x-icon">
-    <title>BINH KMA</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <title>Document</title>
 </head>
 <body>
   <canvas id="bgCanvas"></canvas>
@@ -16,7 +17,9 @@
         <div class="avt">
           <img src="./icon/avt.JPG" alt="">         
         </div>
-        <div class="name">BINH KMA </div>
+        <div class="name">
+          <span>BINH KMA</span>  
+        </div>
       </div>
       <div class="row">
         <div class="icon">
@@ -37,10 +40,10 @@
       
     </div>
     <div class="player">
-      <audio id="autoplay" controls autoplay loop preload="auto" >
-	 <source src="./mp3/noiNhoTuaThienHa.mp3">
+      <audio id="autoplay"  controls autoplay preload="auto" >
+        <!-- <source src="./mp3/noiNhoTuaThienHa.mp3"> -->
+        <source src="./mp3/JarofHeart.mp3">
       </audio>
-    
     </div>
   </div>
     <script src="./script.js">    
