--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     </div>
     <div class="player">
       <audio id="autoplay"  controls autoplay preload="auto" >
-        <!-- <source src="./mp3/noiNhoTuaThienHa.mp3"> -->
-        <source src="./mp3/JarofHeart.mp3">
+        <source src="./mp3/noiNhoTuaThienHa.mp3">
       </audio>
     </div>
   </div>
