--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       
     </div>
     <div class="player">
-      <audio id="autoplay"  controls autoplay preload="auto" >
-        <source src="./mp3/noiNhoTuaThienHa.mp3">
+      <audio id="autoplay"  controls autoplay >
+        <source src="./mp3/Studio Ghibli (mp3cut.net) (1).mp3">
       </audio>
     </div>
   </div>
