--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./icon/avt.JPG" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <title>Nguyen Van Binh</title>
+    <title class="head">Nguyen Van Binh</title>
 </head>
 <body>
   <canvas id="bgCanvas"></canvas>
