--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="name-music"></div>
         </div>
       </div>
-      <i class="single-name">bbb</i>
+      <i class="singer-name"></i>
     </div>
     <div class="player">
       <i id="back-btn" class="fa-solid fa-backward control-btn "></i>
